fixed weird extension jumping

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .background{
     margin: 0 auto;
     padding: 1em 0em;
-    
+    width: 450px;
 }
